OO-7731: send notifications on blog/podcasts comments as emails
Send a notification on blog/podcasts comments by reply of an user
comment, or notify all owners of the blog/podcast and courses